<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="6"
    android:columnCount="3">

    <!-- Element 1, Textview -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="169dp"
        android:layout_height="76dp"
        android:layout_column="1"
        android:layout_row="0"
        android:fontFamily="monospace"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:text="@string/GV_msg_01"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:typeface="sans" />

    <!-- Element 2, Button -->
    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:background="#004422"
        android:backgroundTint="#00FF44"
        android:elevation="20dp"
        android:text="@string/GV_msg_02"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <!-- Element 3, ToggleButton -->
    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/GV_msg_03" />

    <!-- Element 4, Check Box -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="101dp"
        android:layout_height="72sp"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/GV_msg_04" />

    <!-- Elelemnt 5, RadioButton -->
    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/GV_msg_05" />

    <!-- Element 6, aligned text Swich -->
    <Switch
        android:id="@+id/switch1"
        android:layout_width="100dp"
        android:layout_height="89sp"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/GV_msg_06"
        android:layout_gravity="end"
        android:textAlignment="textEnd"
        android:textColor="#990000" />

    <!-- Element 7, Cursive text -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="169dp"
        android:layout_height="164dp"
        android:layout_column="1"
        android:layout_row="5"
        android:fontFamily="cursive"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:text="@string/GV_msg_07"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:typeface="sans" />

</GridLayout>