<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <!-- Element 1, centered textView -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_weight="0.06"
        android:text="@string/LLH_msg_01"
        android:textAlignment="center"
        android:textColor="#FF0000" />

    <!-- Element 2, Digits only entry field -->
    <EditText
        android:id="@+id/editText4"
        android:layout_width="34sp"
        android:layout_height="50sp"
        android:ems="10"
        android:inputType="number"
        android:layout_weight="0.05" />

    <!-- Element 3, Radio Button -->
    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="74sp"
        android:text="@string/LLH_msg_02"
        android:layout_weight="0.05" />

    <!-- Element 4, Right aligned text Swich -->
    <Switch
        android:id="@+id/switch1"
        android:layout_width="70sp"
        android:layout_height="89sp"
        android:text="@string/LLH_msg_03"
        android:layout_weight="0.20"
        android:textColor="#990000"
        android:gravity="right"
        android:textAlignment="gravity"/>

    <!-- Element 5, Check Box -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="72sp"
        android:layout_weight="0.16"
        android:text="@string/LLH_msg_04" />

</LinearLayout>