<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/Banner"
        android:textAlignment="center"
        android:textColor="#BFBFBF"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="53dp"
        app:layout_constraintTop_toBottomOf="@+id/activityView_5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <!--  Line 2, editText -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="27dp"
        android:hint="@string/edit_message_1"
        android:textSize="16sp"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <!--  Line 2, Button -->
    <Button
        android:id="@+id/button1"
        android:onClick="sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_1"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!--  Line 2, constraints for Button/TextEntry Box -->
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <!--  Line 3, activityView_2 -->
    <TextView
        android:id="@+id/activityView_2"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:text="@string/edit_message_2"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:textSize="18sp"/>

    <!--  Line 3, Button -->
    <Button
        android:id="@+id/button2"
        android:onClick="goToLinearLayoutHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

     <!--  Line 4, activityView_3 -->
    <TextView
        android:id="@+id/activityView_3"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:text="@string/edit_message_3"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/activityView_2"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:textSize="18sp"/>

    <!--  Line 4, Button -->
    <Button
        android:id="@+id/button3"
        android:onClick="goToLinearLayoutVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <!--  Line 5, activityView_4 -->
    <TextView
        android:id="@+id/activityView_4"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:text="@string/edit_message_4"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/activityView_3"
        app:layout_constraintRight_toLeftOf="@+id/button4"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:textSize="18sp"/>

    <!--  Line 5, Button -->
    <Button
        android:id="@+id/button4"
        android:onClick="goToGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <!--  Line 6, activityView_5 -->
    <TextView
        android:id="@+id/activityView_5"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:text="@string/edit_message_5"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/activityView_4"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:textSize="18sp"/>

    <!--  Line 6, Button -->
    <Button
        android:id="@+id/button5"
        android:onClick="goToRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</android.support.constraint.ConstraintLayout>
